# rag_agenctic_ai

./: .gitignore  README.md  main.py  pyproject.toml
code_here/: app.py  flask_app.py  model.py  standalone_app.py
evaluate_models/: config.py  models_llm_test.py
food_recommdn_chromdb/: food_recommendation.md  gen_md.py  readme.md  shared_functions.py
notebook/: Build Smarter AI Apps- Empower LLMs with LangChain-v3-GenAIcourse.ipynb  In-Context Learning and Prompt Templates-v3-GenAIcourse.ipynb  Similarity search by hand-v1.ipynb  embeddings_visuals.ipynb  food_recommend_wChroma.ipynb  readme.md
rag_app/: rag_private_doc.py
rag_gradio_app/: gradio_image_caption.py  gradio_image_detection.py  gradio_llm.py  gradio_rag_private_doc.py
templates/: index.html
