[project]
name = "genai-flask-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.64.0",
    "chromadb>=1.0.20",
    "flask>=3.1.2",
    "ibm-watsonx-ai>=1.3.34",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.19",
    "langchain-community>=0.3.27",
    "openai>=1.101.0",
    "sentence-transformers>=5.1.0",
    "wget>=3.2",
]
