[project]
name = "genai-flask-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.64.0",
    "chromadb>=1.0.20",
    "flask>=3.1.2",
    "gradio>=5.43.1",
    "ibm-watsonx-ai>=1.3.34",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.19",
    "langchain-community>=0.3.27",
    "matplotlib>=3.10.6",
    "openai>=1.101.0",
    "pdoc>=15.0.4",
    "pillow>=10.0.0",
    "scikit-learn>=1.7.1",
    "sentence-transformers>=5.1.0",
    "torch>=2.8.0",
    "torchvision>=0.19.0",
    "transformers>=4.55.4",
    "wget>=3.2",
]
